# QuantForge-quant_research_framework

./: CMakeLists.txt  main.cpp
.plugins/sma_native/: manifest.json  sma_native.cpp
.plugins/sma_python/: manifest.json  sma_python.py
src/forge/forge_engine/: CMakeLists.txt  forge.cpp  forge.hpp
src/forge/stores/: CMakeLists.txt  data_store.cpp  data_store.hpp  report_store.cpp  report_store.hpp
src/http/api/: stock_api.cpp  stock_api.hpp
src/http/client/: curl_easy.cpp  curl_easy.hpp
src/plugins/abi/: CMakeLists.txt  abi.h  lib_handler.hpp
src/plugins/loaders/: CMakeLists.txt  interface.hpp  native_loader.cpp  native_loader.hpp  python_loader.cpp  python_loader.hpp
src/plugins/manager/: CMakeLists.txt  plugin_manager.cpp  plugin_manager.hpp
src/plugins/manifest/: CMakeLists.txt  manifest.cpp  manifest.example.json  manifest.hpp  manifest.schema.json
src/renderers/: CMakeLists.txt  console_renderer.cpp  console_renderer.hpp  interface.hpp
src/simulators/back_test/: CMakeLists.txt  abi_converter.cpp  abi_converter.hpp  back_test_engine.cpp  back_test_engine.hpp  equity_calculator.cpp  equity_calculator.hpp  exchange.cpp  executor.cpp  executor.hpp  exit_order_book.cpp  exit_order_book.hpp  limit_order_book.cpp  models.hpp  position_calculator.cpp  position_calculator.hpp  slippage_calculator.cpp  slippage_calculator.hpp  state.cpp  state.hpp
src/utils/: CMakeLists.txt  constants.hpp  max_heap.hpp  min_heap.hpp  money_utils.cpp  money_utils.hpp  string_utils.cpp  string_utils.hpp  thread_pool.cpp  thread_pool.hpp  time_utils.cpp  time_utils.hpp
(+3 files in other folders)
